# mirror

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: compare_models.py  run_full_suite.py
mirror/: __init__.py  profile.py  providers.py  suite.py
mirror/blindspot/: __init__.py  test.py
mirror/continuity/: __init__.py  test.py
mirror/resonance/: __init__.py  test.py
mirror/self_model/: __init__.py  test.py
tests/: test_profile.py
