[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mirror-consciousness"
version = "0.1.0"
description = "Metrics for Identity, Recall, Recurrence, and Observed Reflection — an engineering toolkit for AI consciousness research"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    {name = "Vlad & Claude", email = "mirror@example.com"},
]
dependencies = [
    "anthropic>=0.40.0",
    "openai>=1.50.0",
    "numpy>=1.26.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[tool.setuptools.packages.find]
include = ["mirror*"]
